--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,7 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+*.orig
+/SyntaxHighlightBox/.hg_archival.txt
+/SyntaxHighlightBox/.hgtags
+/SyntaxHighlightBox/.hgignore
